# claude-monitor

./: .gitignore  README.md  pyproject.toml
ClaudeMonitor/: Package.swift  run.sh
ClaudeMonitor/ClaudeMonitor/: AppDelegate.swift  ClaudeMonitorApp.swift
ClaudeMonitor/ClaudeMonitor.xcodeproj/: project.pbxproj
ClaudeMonitor/ClaudeMonitor/Models/: IdeLockFile.swift  Session.swift  SessionStatus.swift  Usage.swift
ClaudeMonitor/ClaudeMonitor/Services/: DirectoryMonitor.swift  SessionStore.swift
ClaudeMonitor/ClaudeMonitor/Views/: MenuBarView.swift  SessionTableView.swift
src/claude_monitor/: hook.py  main.py  state.py  tui.py  usage.py
